# eeg-desktop-2

./: README.md  pyproject.toml  requirements.txt  settings.json  需求和架构说明.md
openbci_realtime_app/: __init__.py  main.py
openbci_realtime_app/acquisition/: __init__.py  acquisition_worker.py  board_factory.py  board_session.py  ports.py
openbci_realtime_app/app/: __init__.py  band_power_widget.py  control_panel.py  eeg_plot_widget.py  main_window.py  spectrum_widget.py  status_bar.py
openbci_realtime_app/config/: default_settings.json  settings.py
openbci_realtime_app/processing/: __init__.py  band_power.py  filters.py  processor_worker.py  spectrum.py  types.py
openbci_realtime_app/recording/: __init__.py  marker.py  recorder.py
openbci_realtime_app/tests/: test_config.py  test_filters.py  test_spectrum.py
